--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
 					<input type="text" class="form-control" placeholder="Name" name="nama" required>
 				</div>
 				<div class="form-group">
-					<label for="nim"> Nim :</label> 
-					<input type="text" class="form-control" placeholder="Nim" name="nim" required>
-				</div>
-				<div class="form-group">
 					<label for="email">Email :</label>
 					<input type="email" class="form-control" placeholder="Email" name="email" required>
 				</div>
@@ -42,6 +38,15 @@
 	</div>
 	</form>
 	</div>
+
+	<footer class="text-dark text-center py-4 mt-5" style="background-color: white;">
+        <div class="container">
+            <p class="mb-0"><strong>Eugenia Eklesia Kansil
+            </strong></p>
+            <p class="mb-0"><strong>220211060034</strong></p>
+        </div>
+    </footer>
+	
 </body>
 </html>
 
