--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 	<footer class="text-dark text-center py-4 mt-5" style="background-color: white;">
         <div class="container">
-            <p class="mb-0"><strong>Eugenia Eklesia Kansil
+            <p class="mb-0"><strong>Imelda Caterina Liwongan Lie
             </strong></p>
-            <p class="mb-0"><strong>220211060034</strong></p>
+            <p class="mb-0"><strong>220211060011</strong></p>
         </div>
     </footer>
 	
